<resources>
    <string name="app_name">Bobby: The Whale Lord of MDP</string>
    <string name="settings_description">Go to Settings</string>
    <string name="settings">Settings</string>
    <string name="lock">Lock</string>
    <string name="log">Log</string>
    <string name="bluetooth">Connect to Bluetooth</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Defined Strings-->
    <string name="predefined_str_1">String 1</string>
    <string name="predefined_str_2">String 2</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="searchDone">Device Found:</string>
    <string name="searchDevice">Searching for Devices....</string>
    <string name="title_activity_preferences">preferencesActivity</string>
    <string name="btStatusOffline">NOT CONNECTED</string>
</resources>