<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="Predefined Strings">

        <EditTextPreference
            android:key="@string/predefined_str_1"
            app:key="@string/predefined_str_1"
            app:title="Predefined String 1"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:key="@string/predefined_str_2"
            app:key="@string/predefined_str_2"
            app:title="Predefined String 2"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>